<resources>
    <string name="app_name">Greencities</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Create Account</string>
    <string name="fullname">Full Name</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_country"> Country</string>
    <string name="action_country">Country</string>
    <string name="action_repeatPassword">Repeat Password</string>
    <string name="prompt_repeatpassword">Repeat Password</string>
    <string name="register">Create Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="city">City</string>
    <string name="prompt_city">City</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile">PROFILE</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="activity_unknown">Unknown Activity</string>
    <string name="activity_in_vehicle">Bus</string>
    <string name="activity_on_bicycle">Cycling</string>
    <string name="activity_on_foot">Walking</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">Walking</string>
    <string name="profileUserName">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
</resources>
